--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+Version 2.4.1, 2024-01-25
+- Upgrade the Pillow version due to the vulnerability CVE-2023-50447.
+
+
 Version 2.4.0, 2023-10-05
 - Upgrade the Pillow version due to the vulnerability CVE-2023-4863.
 
